--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "last 2 ios versions"
   ],
   "devDependencies": {
-    "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "autoprefixer": "^10.4.14",
-    "babel-loader": "^9.1.2",
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "autoprefixer": "^10.4.16",
+    "babel-loader": "^9.1.3",
     "browser-sync": "^2.23.7",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^4.3.0",
     "gulp-postcss": "^9.0.1",
     "gulp-sass": "^5.1.0",
-    "sass": "^1.63.3",
-    "webpack": "^5.86.0",
+    "sass": "^1.69.5",
+    "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-stream": "^7.0.0"
   },
@@ -36,7 +36,9 @@
   },
   "homepage": "https://github.com/evilevgeniys/food_site#readme",
   "dependencies": {
-    "json-server": "^0.17.4"
+    "json-server": "^0.17.4",
+    "package.json": "^0.0.0"
   },
+  "keywords": [],
   "description": ""
 }
